[gd_scene load_steps=6 format=3 uid="uid://ccetflehhcyu"]

[ext_resource type="Script" uid="uid://dqg6e5bfkgt5y" path="res://Main/Scripts/Monster_scripts/karen_centipede.gd" id="1_kr2bk"]
[ext_resource type="Texture2D" uid="uid://clygk5s0vu2ar" path="res://Player/testChar/hit_0.png" id="2_ah1ll"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kr2bk"]
radius = 40.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_lbp6c"]
cull_mode = 1
polygon = PackedVector2Array(-37, 57.8, -37, 59.1, -71.2, 62, -78.3, 62, -117.1, 73, -121.4, 73, -164.4, 93, -166.6, 93, -187.6, 107, -189.7, 107, -215.7, 129, -217.9, 129, -251.9, 166, -253.1, 166, -273.1, 196, -274.3, 196, -290.3, 229, -291.5, 229, -305.5, 273, -306.7, 273, -312.7, 312, -314, 312, -315, 357, -315, 360.2, -311, 386.3, -311, 393.3, -303, 422, -303, 427.4, -290, 458.3, -290, 461.6, -266, 501.5, -266, 503.7, -244, 529.7, -244, 531.9, -203, 568.8, -203, 570.1, -168, 592.1, -168, 593.3, -131, 609.2, -131, 610.5, -87.3, 623, -84.7, 623, -81, 640.4, -81, 646.4, -75, 662.4, -75, 665.6, -65, 681.6, -65, 683.9, -51, 696.9, -51, 698.2, -39, 704.2, -39, 705.6, -20, 709.6, -20, 711, 3.30005, 711, 15.3, 707, 18.6, 707, 31.5, 698, 33.9, 698, 44.9, 686, 46.1, 686, 55.1, 671, 56.4, 671, 77, 609.3, 77, 607.2, 110.5, 591, 112.7, 591, 151.7, 562, 153.8, 562, 185.8, 529, 187, 529, 206, 503, 207.2, 503, 228.2, 464, 229.4, 464, 241.4, 430, 242.6, 430, 251.7, 387, 252.9, 387, 254.9, 354, 256.1, 354, 253, 308.9, 253, 301.7, 241, 255, 241, 251.5, 217, 201.5, 217, 199.3, 198, 173.3, 198, 171.2, 183, 155.1, 183, 153.1, 154, 126, 154, 125, 130, 107.9, 130, 106.8, 82, 81.7, 82, 80.5, 51, 70.5, 51, 69.4, 26, 64.3, 26, 63.2)

[sub_resource type="CircleShape2D" id="CircleShape2D_svm8m"]
radius = 70.0071

[node name="KarenCentipede" type="CharacterBody2D" groups=["Monster"]]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_kr2bk")
monster_name = "KarenCentipede"
env_temp = "hot"
sight_visible = true
sounds = true
light_flick = true
move_speed = 450.0

[node name="cs" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, 0.5)
shape = SubResource("CircleShape2D_kr2bk")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(0, -63)
scale = Vector2(0.15, 0.15)
occluder = SubResource("OccluderPolygon2D_lbp6c")

[node name="test2" type="Sprite2D" parent="."]
self_modulate = Color(0, 1, 1, 1)
position = Vector2(0, -63)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_ah1ll")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_svm8m")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="nav_agent" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
path_postprocessing = 1
avoidance_enabled = true
debug_enabled = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
